<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * 
 * Funf: Open Sensing Framework
 * Copyright (C) 2010-2011 Nadav Aharony, Wei Pan, Alex Pentland.
 * Acknowledgments: Alan Gardner
 * Contact: nadav@media.mit.edu
 * 
 * This file is part of Funf.
 * 
 * Funf is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or (at your option) any later version.
 * 
 * Funf is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU Lesser General Public License for more details.
 * 
 * You should have received a copy of the GNU Lesser General Public
 * License along with Funf. If not, see <http://www.gnu.org/licenses/>.
 * 
 -->
<resources>
    <string name="app_name">__NAME__</string>
    <string name="app_id">__ID__</string>
    <string name="description">__DESCRIPTION__</string>
    <string name="contact_email"><a href="mailto:__EMAIL__">__EMAIL__</a></string>
    <string name="probes">__PROBES__</string>
    <string name="config">__CONFIG__</string>
    <string name="have_questions">If you have questions, contact:</string>
    <string name="app_records">This app records:</string>
    <string name="opt_out">To opt out of the study and stop sharing data:</string>
    <string name="uninstall">Uninstall this App</string>
    <string name="made_by">made by</string>
    <string name="funf_in_a_box">Funf In A Box</string>
    <string name="sync">Sync Now</string>
    <string name="syncing_message">Syncing...</string>
</resources>