<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * 
 * Funf: Open Sensing Framework
 * Copyright (C) 2010-2011 Nadav Aharony, Wei Pan, Alex Pentland.
 * Acknowledgments: Alan Gardner
 * Contact: nadav@media.mit.edu
 * 
 * This file is part of Funf.
 * 
 * Funf is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or (at your option) any later version.
 * 
 * Funf is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU Lesser General Public License for more details.
 * 
 * You should have received a copy of the GNU Lesser General Public
 * License along with Funf. If not, see <http://www.gnu.org/licenses/>.
 * 
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    >
    
    
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="5dip"
	    >
		<LinearLayout 
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dip"
		    android:paddingBottom="20dip"
		    >
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/app_name"
			    android:gravity="center"
			    android:textSize="30sp"
			    android:textStyle="bold"
			    android:textColor="@color/logo_color"
			    
			    />
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/description"
			    android:gravity="center"
			    android:textSize="14sp"
			    android:textColor="@color/text_color"
			    />
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dip"
		    android:paddingBottom="10dip"
		    >
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/app_records"
			    android:gravity="center"
			    android:textColor="@color/text_color"
			    android:textStyle="bold"
			    />
			<TextView  
			    android:id="@+id/probe_list"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text=""
			    android:gravity="center"
			    android:textColor="@color/text_color"
			    />
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dip"
		    android:paddingBottom="10dip"
		    >
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/have_questions"
			    android:gravity="center"
			    android:textColor="@color/text_color"
			    android:textStyle="bold"
			    />
			
			<TextView  android:id="@+id/contact_email"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/contact_email"
			    android:gravity="center"
			    android:linksClickable="true"
			    android:textColor="@color/text_color"
			    />
		
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    
		    android:paddingTop="40dip"
		    android:paddingBottom="10dip"
		    >
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/opt_out"
			    android:gravity="center"
			    android:textColor="@color/text_color"
			    />
			<Button  android:id="@+id/uninstall_button" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:gravity="center" 
			    android:layout_gravity="center"
			    android:text="@string/uninstall"
			    />
		</LinearLayout>
	</LinearLayout>


	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:paddingTop="10dip"
	    android:paddingBottom="5dip"
	    android:layout_alignParentBottom="true">
	
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/made_by"
		    android:gravity="center"
		    />
		<ImageView android:id="@+id/logo_button" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:src="@drawable/funfinabox_small"
		    android:contentDescription="@string/funf_in_a_box"/>
	</LinearLayout>
</RelativeLayout>

